feat(add navbar)

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <div class="navbar_title container-fluid">
             <div class="container-xxl p-3">
                 <div class="row justify-content-around">
-                    <div class="title_logo col-3">
-                    
+                    <div class="title_logo col-3 d-flex justify-content-center align-items-center p-3">
+                    <h6 class="color_white">START BOOTSRAP</h6>
                     </div>
-                    <div class="link_ col-3">
-
+                    <div class="link_ col-3 d-flex justify-content-center align-items-center p-3">
+                        <a class="text-decoration-none color_white" href="#portfolio">PORTFOLIO</a>
+                        <a class="text-decoration-none color_white ms-1 me-1" href="#about">ABOUT</a>
+                        <a class="text-decoration-none color_white" href="#contact">CONTACT</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +50,7 @@
 
         <!-- portfolio -->
         <section>
-            <div class="container-fluid">
+            <div id="portfolio" class="container-fluid">
                 <div class="container-xxl p-5">
                     <div class="row justify-content-center">
                         <div class="title_ col-12 mt-3 mb-3"></div>
@@ -90,7 +92,7 @@
 
         <!-- about -->
         <section>
-            <div class="bg_cyan container-fluid">
+            <div id="about" class="bg_cyan container-fluid">
                 <div class="container-xxl">
                     <div class="row justify-content-center">
                         <div class="title_ col-12 mt-3 mb-3"></div>
@@ -105,7 +107,7 @@
         
         <!-- contact me -->
         <section>
-            <div class="container-fluid">
+            <div id="contact" class="container-fluid">
                 <div class="container-xxl p-3">
                     <div class="row">
                         <div class="title_ col-12 mt-3 mb-3"></div>
