--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div class="container-xxl p-3">
                 <div class="row justify-content-around">
                     <div class="title_logo col-3 d-flex justify-content-center align-items-center p-3">
-                    <h6 class="color_white">START BOOTSRAP</h6>
+                    <h6 class="color_white">START BOOTSTRAP</h6>
                     </div>
-                    <div class="link_ col-3 d-flex justify-content-center align-items-center p-3">
+                    <div class="link_ col-4 d-flex justify-content-center align-items-center p-3">
                         <a class="text-decoration-none color_white" href="#portfolio">PORTFOLIO</a>
-                        <a class="text-decoration-none color_white ms-1 me-1" href="#about">ABOUT</a>
+                        <a class="text-decoration-none color_white ms-2 me-2" href="#about">ABOUT</a>
                         <a class="text-decoration-none color_white" href="#contact">CONTACT</a>
                     </div>
                 </div>
@@ -40,9 +40,9 @@
                 <div class="container-xxl p-5">
                     <div class="row justify-content-center">
                         <div class="img_title_main col-4"></div>
-                        <div class="title_ col-9"></div>
-                        <div class="icon_ col-8"></div>
-                        <div class="info_ col-10"></div>
+                        <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
+                        <!-- aggiungere stellina -->
+                        <!-- aggiungere testo sotto -->
                     </div>
                 </div>
             </div>                          
@@ -53,8 +53,8 @@
             <div id="portfolio" class="container-fluid">
                 <div class="container-xxl p-5">
                     <div class="row justify-content-center">
-                        <div class="title_ col-12 mt-3 mb-3"></div>
-                        <div class="icon_ col-12 mb-3"></div>
+                        <h2 class="display-6 text-center color_black">PORTFOLIO</h2>
+                        <!-- aggiungere stellina -->
                         <div class="card_ col-3 m-2 p-4">
                             <div class="row justify-content-center align-items-center">
                                 <div class="content_card col-10"></div>
@@ -95,8 +95,8 @@
             <div id="about" class="bg_cyan container-fluid">
                 <div class="container-xxl">
                     <div class="row justify-content-center">
-                        <div class="title_ col-12 mt-3 mb-3"></div>
-                        <div class="icon_ col-12"></div>
+                        <h2 class="display-6 text-center color_white">ABOUT</h2>
+                        <!-- aggiungere stellina -->
                         <div class="paragraph_ col-6"></div>
                         <div class="paragraph_ col-6"></div>
                         <div class="col-12 m-3"></div>
@@ -110,8 +110,8 @@
             <div id="contact" class="container-fluid">
                 <div class="container-xxl p-3">
                     <div class="row">
-                        <div class="title_ col-12 mt-3 mb-3"></div>
-                        <div class="icon_ col-12 mb-3"></div>
+                        <h2 class="display-6 text-center color_black">CONTACT ME</h2>
+                        <!-- aggiungere stellina -->
                         <div class="contact_ col-12 mb-1"></div>
                         <div class="contact_ col-12 mb-1"></div>
                         <div class="contact_ col-12 mb-1"></div>
