feat(add star and line)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script> -->
     <title>Freelancer</title>
 </head>
+
 <body>
 
     <!-- HEADER -->
@@ -19,7 +22,7 @@
             <div class="container-xxl p-3">
                 <div class="row justify-content-around">
                     <div class="title_logo col-3 d-flex justify-content-center align-items-center p-3">
-                    <h6 class="color_white">START BOOTSTRAP</h6>
+                        <h6 class="color_white">START BOOTSTRAP</h6>
                     </div>
                     <div class="link_ col-4 d-flex justify-content-center align-items-center p-3">
                         <a class="text-decoration-none color_white" href="#portfolio">PORTFOLIO</a>
@@ -35,98 +38,105 @@
     <main>
 
         <!-- start bootsrap -->
-        <section> 
-            <div class="bg_cyan container-fluid">
-                <div class="container-xxl p-5">
-                    <div class="row justify-content-center">
-                        <div class="img_title_main col-4"></div>
-                        <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
-                        <!-- aggiungere stellina -->
-                        <!-- aggiungere testo sotto -->
+        <section class="bg_cyan container-fluid">
+            <div class="container-xxl p-5">
+                <div class="row justify-content-center">
+                    <div class="img_title_main col-4"></div>
+                </div>
+                <div class="row justify-content-center">
+                    <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
+                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                        <div class="line_ col-3 bg_white"></div>
+                        <i class="fa-solid fa-star color_white display-6"></i>
+                        <div class="line_ col-3 bg_white"></div>
                     </div>
                 </div>
-            </div>                          
+            </div>
         </section>
 
         <!-- portfolio -->
-        <section>
-            <div id="portfolio" class="container-fluid">
-                <div class="container-xxl p-5">
-                    <div class="row justify-content-center">
-                        <h2 class="display-6 text-center color_black">PORTFOLIO</h2>
-                        <!-- aggiungere stellina -->
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+        <section id="portfolio" class="container-fluid">
+            <div class="container-xxl p-5">
+                <div class="row justify-content-center">
+                    <h2 class="display-6 text-center color_black">PORTFOLIO</h2>
+                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                        <div class="line_ col-3 bg_black"></div>
+                        <i class="fa-solid fa-star color_black display-6"></i>
+                        <div class="line_ col-3 bg_black"></div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                   
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+                    </div>
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+                    </div>
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+                    </div>
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+                    </div>
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
-                        <div class="card_ col-3 m-2 p-4">
-                            <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
-                            </div>
+                    </div>
+                    <div class="card_ col-3 m-2 p-4">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="content_card col-10"></div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- about -->
-        <section>
-            <div id="about" class="bg_cyan container-fluid">
-                <div class="container-xxl">
-                    <div class="row justify-content-center">
-                        <h2 class="display-6 text-center color_white">ABOUT</h2>
-                        <!-- aggiungere stellina -->
-                        <div class="paragraph_ col-6"></div>
-                        <div class="paragraph_ col-6"></div>
-                        <div class="col-12 m-3"></div>
-                    </div>
+        <section id="about" class="bg_cyan container-fluid">
+            <div class="container-xxl">
+                <div class="row justify-content-center">
+                    <h2 class="display-6 text-center color_white">ABOUT</h2>
+                    <!-- aggiungere stellina -->
+                    <div class="paragraph_ col-6"></div>
+                    <div class="paragraph_ col-6"></div>
+                    <div class="col-12 m-3"></div>
                 </div>
             </div>
+
         </section>
-        
+
         <!-- contact me -->
-        <section>
-            <div id="contact" class="container-fluid">
-                <div class="container-xxl p-3">
-                    <div class="row">
-                        <h2 class="display-6 text-center color_black">CONTACT ME</h2>
-                        <!-- aggiungere stellina -->
-                        <div class="contact_ col-12 mb-1"></div>
-                        <div class="contact_ col-12 mb-1"></div>
-                        <div class="contact_ col-12 mb-1"></div>
-                        <div class="contact_ col-12 mb-1"></div>
-                        <div class="contact_ col-2"></div>
-                    </div>
+        <section id="contact" class="container-fluid">
+            <div class="container-xxl p-3">
+                <div class="row">
+                    <h2 class="display-6 text-center color_black">CONTACT ME</h2>
+                    <!-- aggiungere stellina -->
+                    <div class="contact_ col-12 mb-1"></div>
+                    <div class="contact_ col-12 mb-1"></div>
+                    <div class="contact_ col-12 mb-1"></div>
+                    <div class="contact_ col-12 mb-1"></div>
+                    <div class="contact_ col-2"></div>
                 </div>
             </div>
+
         </section>
     </main>
 
     <!-- FOOTER -->
     <footer>
         <!-- footer up -->
-        <div class="bg_footer_up container-fluid">
+        <section class="bg_footer_up container-fluid">
             <div class="container-xxl p-3">
                 <div class="row justify-content-evenly">
                     <div class="col-3"></div>
@@ -134,15 +144,18 @@
                     <div class="col-3"></div>
                 </div>
             </div>
-        </div>
+        </section>
+
         <!-- footer down -->
-        <div class="bg_footer_down container-fluid">
+        <section class="bg_footer_down container-fluid">
             <div class="container-xxl p-3">
                 <div class="row justify-content-center">
                     <div class="col-2"></div>
                 </div>
             </div>
-        </div>
+        </section>
+
     </footer>
 </body>
+
 </html>
