--- a/index.html
+++ b/index.html
@@ -38,26 +38,27 @@
     <main>
 
         <!-- start bootsrap -->
-        <section class="bg_cyan container-fluid">
-            <div class="container-xxl p-5">
+        <section class="bg_cyan">
+            <div class="container-xxl p-3">
                 <div class="row justify-content-center">
                     <div class="img_title_main col-4"></div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mb-4">
                     <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
-                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                    <div class="col-6 d-flex justify-content-evenly align-items-center mb-3">
                         <div class="line_ col-3 bg_white"></div>
                         <i class="fa-solid fa-star color_white display-6"></i>
                         <div class="line_ col-3 bg_white"></div>
                     </div>
+                    <h6 class="color_white text-center mt-3">GRAPHIC ARTIST-WEB DEIGNER-ILLUSTRATOR</h6>
                 </div>
             </div>
         </section>
 
         <!-- portfolio -->
-        <section id="portfolio" class="container-fluid">
-            <div class="container-xxl p-5">
-                <div class="row justify-content-center">
+        <section id="portfolio">
+            <div class="container-xxl p-3">
+                <div class="row justify-content-center mb-4">
                     <h2 class="display-6 text-center color_black">PORTFOLIO</h2>
                     <div class="col-6 d-flex justify-content-evenly align-items-center">
                         <div class="line_ col-3 bg_black"></div>
@@ -65,36 +66,37 @@
                         <div class="line_ col-3 bg_black"></div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                   
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                <div class="col-12">
+                    <div class="row justify-content-center gap-3">
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_ col-3 m-2 p-4">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="content_card col-10"></div>
+                        <div class="card_ col-3 p-3">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="content_card col-10"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,30 +105,72 @@
         </section>
 
         <!-- about -->
-        <section id="about" class="bg_cyan container-fluid">
+        <section id="about" class="bg_cyan">
             <div class="container-xxl">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mb-4">
                     <h2 class="display-6 text-center color_white">ABOUT</h2>
-                    <!-- aggiungere stellina -->
-                    <div class="paragraph_ col-6"></div>
-                    <div class="paragraph_ col-6"></div>
-                    <div class="col-12 m-3"></div>
+                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                        <div class="line_ col-3 bg_white"></div>
+                        <i class="fa-solid fa-star color_white display-6"></i>
+                        <div class="line_ col-3 bg_white"></div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="paragraph_ col-4">
+                        <p class="color_white">
+                            Freelancer is a free bootstrap theme created by Start
+                            Bootstrap. The download includes the complete
+                            source files including HTML, CSS, and JavaScript as
+                            well as optional LESS stylesheets for easy
+                            customization.
+                        </p>
+                    </div>
+                    <div class="paragraph_ col-4">
+                        <p class="color_white">
+                            Whether youire a student looking to showcase your
+                            work, a professional looking to attract clients, or a
+                            graphic artist looking to share your projects, this
+                            template is the perfect starting point!
+                        </p>
+                    </div>
+                    <div class="col-12 m-3 text-center">
+                        <button type="button" class="btn btn-outline-light color_white">
+                            <i class="fa-solid fa-download color_black"></i>
+                            Download
+                        </button>
+                    </div>
                 </div>
             </div>
 
         </section>
 
         <!-- contact me -->
-        <section id="contact" class="container-fluid">
+        <section id="contact">
             <div class="container-xxl p-3">
-                <div class="row">
+                <div class="row justify-content-center mb-4">
                     <h2 class="display-6 text-center color_black">CONTACT ME</h2>
-                    <!-- aggiungere stellina -->
-                    <div class="contact_ col-12 mb-1"></div>
-                    <div class="contact_ col-12 mb-1"></div>
-                    <div class="contact_ col-12 mb-1"></div>
-                    <div class="contact_ col-12 mb-1"></div>
-                    <div class="contact_ col-2"></div>
+                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                        <div class="line_ col-3 bg_black"></div>
+                        <i class="fa-solid fa-star color_black display-6"></i>
+                        <div class="line_ col-3 bg_black"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="contact_ col-12 mb-1 p-3">
+                        <input type="text" class="col-12 p-3" placeholder="Name">
+                    </div>
+                    <div class="contact_ col-12 mb-1 p-3">
+                        <input type="email" name="Email Address" class="col-12 p-3" placeholder="Email Address">
+                    </div>
+                    <div class="contact_ col-12 mb-1 p-3">
+                        <input type="number" name="Telephone Number" class="col-12 p-3" placeholder="Phone Number">
+                    </div>
+                    <div class="contact_ col-12 mb-1 p-3">
+                        <textarea name="message" class="col-12 p-3" placeholder="Message" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="contact_ col-2 p-3">
+                        <button type="button" class="btn btn-success bg_cyan">Send</button>
+                    </div>
                 </div>
             </div>
 
@@ -136,7 +180,7 @@
     <!-- FOOTER -->
     <footer>
         <!-- footer up -->
-        <section class="bg_footer_up container-fluid">
+        <section class="bg_footer_up">
             <div class="container-xxl p-3">
                 <div class="row justify-content-evenly">
                     <div class="col-3"></div>
@@ -147,7 +191,7 @@
         </section>
 
         <!-- footer down -->
-        <section class="bg_footer_down container-fluid">
+        <section class="bg_footer_down">
             <div class="container-xxl p-3">
                 <div class="row justify-content-center">
                     <div class="col-2"></div>
