feat(main) add img in card

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <section class="bg_cyan">
             <div class="container-xxl p-3">
                 <div class="row justify-content-center">
-                    <div class="img_title_main col-4"></div>
+                    <div class="img_title_main col-4">
+                        <img class="img-fluid" src="./img/avatar.svg" alt="avatar">
+                    </div>
                 </div>
                 <div class="row justify-content-center mb-4">
                     <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
@@ -70,32 +72,32 @@
                     <div class="row justify-content-center gap-3">
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/cabin.png" alt="cabin">
                             </div>
                         </div>
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/cake.png" alt="cake">
                             </div>
                         </div>
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/circus.png" alt="circus">
                             </div>
                         </div>
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/game.png" alt="game">
                             </div>
                         </div>
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/safe.png" alt="safe">
                             </div>
                         </div>
                         <div class="card_ col-3 p-3">
                             <div class="row justify-content-center align-items-center">
-                                <div class="content_card col-10"></div>
+                                <img class="img-fluid" src="./img/submarine.png" alt="submarine">
                             </div>
                         </div>
                     </div>
@@ -156,21 +158,23 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="contact_ col-12 mb-1 p-3">
-                        <input type="text" class="col-12 p-3" placeholder="Name">
-                    </div>
-                    <div class="contact_ col-12 mb-1 p-3">
-                        <input type="email" name="Email Address" class="col-12 p-3" placeholder="Email Address">
-                    </div>
-                    <div class="contact_ col-12 mb-1 p-3">
-                        <input type="number" name="Telephone Number" class="col-12 p-3" placeholder="Phone Number">
-                    </div>
-                    <div class="contact_ col-12 mb-1 p-3">
-                        <textarea name="message" class="col-12 p-3" placeholder="Message" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="contact_ col-2 p-3">
-                        <button type="button" class="btn btn-success bg_cyan">Send</button>
-                    </div>
+                    <form action="#">
+                        <div class="contact_ col-12 mb-1 p-3">
+                            <input type="text" class="col-12 p-3" placeholder="Name">
+                        </div>
+                        <div class="contact_ col-12 mb-1 p-3">
+                            <input type="email" name="Email Address" class="col-12 p-3" placeholder="Email Address">
+                        </div>
+                        <div class="contact_ col-12 mb-1 p-3">
+                            <input type="number" name="Telephone Number" class="col-12 p-3" placeholder="Phone Number">
+                        </div>
+                        <div class="contact_ col-12 mb-1 p-3">
+                            <textarea name="message" class="col-12 p-3" placeholder="Message" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="contact_ col-2 p-3">
+                            <button type="submit" class="btn btn-success bg_cyan">Send</button>
+                        </div>
+                    </form>
                 </div>
             </div>
 
