--- a/index.html
+++ b/index.html
@@ -187,9 +187,26 @@
         <section class="bg_footer_up">
             <div class="container-xxl p-3">
                 <div class="row justify-content-evenly">
-                    <div class="col-3"></div>
-                    <div class="col-3"></div>
-                    <div class="col-3"></div>
+                    <div class="col-3 p-5 text-center color_white">
+                        <h5>LOCATION</h5>
+                        <small>2215 John Daniel Drive Clark, MO</small>
+                        <small>54243</small>
+                    </div>
+                    <div class="col-3 p-5 text-center color_white">
+                        <h5>AROUND THE WEB</h5>
+                        <i class="fa-brands fa-facebook-f border rounded-circle p-3"></i>
+                        <i class="fa-brands fa-google-plus-g border rounded-circle p-3"></i>
+                        <i class="fa-brands fa-twitter border rounded-circle p-3"></i>
+                        <i class="fa-brands fa-linkedin-in border rounded-circle p-3"></i>
+                    </div>
+                    <div class="col-3 p-5 text-center color_white">
+                        <h5>ABOUT FREELANCER</h5>
+                        <small>
+                            Frælance is a free to use, source
+                            Bootstrap theme created by
+                            <a href="#" class="text-decoration-none color_cyan">Start Bootstrap</a>.
+                        </small>
+                    </div>
                 </div>
             </div>
         </section>
