--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
         <section class="bg_footer_down">
             <div class="container-xxl p-3">
                 <div class="row justify-content-center">
-                    <div class="col-2"></div>
+                    <div class="col-3 text-center color_white p-3">
+                        <small>Copyright © Your Website 2019</small>
+                    </div>
                 </div>
             </div>
         </section>
