feat(clear code)

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 
     <!-- HEADER -->
     <header>
-        <div class="navbar_title container-fluid">
-            <div class="container-xxl p-3">
-                <div class="row justify-content-around">
-                    <div class="title_logo col-3 d-flex justify-content-center align-items-center p-3">
+        <div class="navbar_title">
+            <div class="container-fluid p-3">
+                <div class="row justify-content-around align-items-center">
+                    <div class="title_logo col-4 d-flex justify-content-center align-items-center p-3">
                         <h6 class="color_white">START BOOTSTRAP</h6>
                     </div>
-                    <div class="link_ col-4 d-flex justify-content-center align-items-center p-3">
-                        <a class="text-decoration-none color_white" href="#portfolio">PORTFOLIO</a>
-                        <a class="text-decoration-none color_white ms-2 me-2" href="#about">ABOUT</a>
-                        <a class="text-decoration-none color_white" href="#contact">CONTACT</a>
+                    <div class="link_ col-4 d-flex justify-content-end align-items-center g-3">
+                        <i class="fa-solid fa-bars color_white d-sm-block d-md-none fs-2 border p-2 rounded-3 mb-3"></i>
+                        <a class="text-decoration-none d-none d-md-block color_white" href="#portfolio">PORTFOLIO</a>
+                        <a class="text-decoration-none d-none d-md-block color_white ms-2 me-2" href="#about">ABOUT</a>
+                        <a class="text-decoration-none d-none d-md-block color_white" href="#contact">CONTACT</a>
                     </div>
                 </div>
             </div>
@@ -36,18 +37,17 @@
 
     <!-- MAIN -->
     <main>
-
         <!-- start bootsrap -->
         <section class="bg_cyan">
-            <div class="container-xxl p-3">
+            <div class="container-fluid p-3">
                 <div class="row justify-content-center">
-                    <div class="img_title_main col-4">
+                    <div class="img_title_main col-8 col-md-4">
                         <img class="img-fluid" src="./img/avatar.svg" alt="avatar">
                     </div>
                 </div>
-                <div class="row justify-content-center mb-4">
+                <div class="row justify-content-center gy-4">
                     <h1 class="display-6 text-center color_white">START BOOTSTRAP</h1>
-                    <div class="col-6 d-flex justify-content-evenly align-items-center mb-3">
+                    <div class="col-8 col-md-6 d-flex justify-content-evenly align-items-center gy-3">
                         <div class="line_ col-3 bg_white"></div>
                         <i class="fa-solid fa-star color_white display-6"></i>
                         <div class="line_ col-3 bg_white"></div>
@@ -59,43 +59,43 @@
 
         <!-- portfolio -->
         <section id="portfolio">
-            <div class="container-xxl p-3">
-                <div class="row justify-content-center mb-4">
+            <div class="container-fluid">
+                <div class="row justify-content-center gy-4">
                     <h2 class="display-6 text-center color_black">PORTFOLIO</h2>
-                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                    <div class="col-8 col-md-6 d-flex justify-content-evenly align-items-center">
                         <div class="line_ col-3 bg_black"></div>
                         <i class="fa-solid fa-star color_black display-6"></i>
                         <div class="line_ col-3 bg_black"></div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="row justify-content-center gap-3">
-                        <div class="card_ col-3 p-3">
+                <div class="container-xxl">
+                    <div class="row justify-content-center">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/cabin.png" alt="cabin">
                             </div>
                         </div>
-                        <div class="card_ col-3 p-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/cake.png" alt="cake">
                             </div>
                         </div>
-                        <div class="card_ col-3 p-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/circus.png" alt="circus">
                             </div>
                         </div>
-                        <div class="card_ col-3 p-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/game.png" alt="game">
                             </div>
                         </div>
-                        <div class="card_ col-3 p-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/safe.png" alt="safe">
                             </div>
                         </div>
-                        <div class="card_ col-3 p-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
                             <div class="row justify-content-center align-items-center">
                                 <img class="img-fluid" src="./img/submarine.png" alt="submarine">
                             </div>
@@ -107,39 +107,41 @@
         </section>
 
         <!-- about -->
-        <section id="about" class="bg_cyan">
-            <div class="container-xxl">
-                <div class="row justify-content-center mb-4">
+        <section id="about" class="bg_cyan mt-3">
+            <div class="container-fluid">
+                <div class="row justify-content-center gx-4">
                     <h2 class="display-6 text-center color_white">ABOUT</h2>
-                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                    <div class="col-6 d-flex justify-content-evenly align-items-center mb-3">
                         <div class="line_ col-3 bg_white"></div>
                         <i class="fa-solid fa-star color_white display-6"></i>
                         <div class="line_ col-3 bg_white"></div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="paragraph_ col-4">
-                        <p class="color_white">
-                            Freelancer is a free bootstrap theme created by Start
-                            Bootstrap. The download includes the complete
-                            source files including HTML, CSS, and JavaScript as
-                            well as optional LESS stylesheets for easy
-                            customization.
-                        </p>
-                    </div>
-                    <div class="paragraph_ col-4">
-                        <p class="color_white">
-                            Whether youire a student looking to showcase your
-                            work, a professional looking to attract clients, or a
-                            graphic artist looking to share your projects, this
-                            template is the perfect starting point!
-                        </p>
-                    </div>
-                    <div class="col-12 m-3 text-center">
-                        <button type="button" class="btn btn-outline-light color_white">
-                            <i class="fa-solid fa-download color_black"></i>
-                            Download
-                        </button>
+                <div class="container-xxl">
+                    <div class="row justify-content-center">
+                        <div class="paragraph_ col-7 col-md-6">
+                            <p class="color_white">
+                                Freelancer is a free bootstrap theme created by Start
+                                Bootstrap. The download includes the complete
+                                source files including HTML, CSS, and JavaScript as
+                                well as optional LESS stylesheets for easy
+                                customization.
+                            </p>
+                        </div>
+                        <div class="paragraph_ col-7 col-md-6">
+                            <p class="color_white">
+                                Whether youire a student looking to showcase your
+                                work, a professional looking to attract clients, or a
+                                graphic artist looking to share your projects, this
+                                template is the perfect starting point!
+                            </p>
+                        </div>
+                        <div class="col-12 gx-3 text-center">
+                            <button type="button" class="btn btn-outline-light color_white mb-3">
+                                <i class="fa-solid fa-download color_black"></i>
+                                Download
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -148,10 +150,10 @@
 
         <!-- contact me -->
         <section id="contact">
-            <div class="container-xxl p-3">
-                <div class="row justify-content-center mb-4">
+            <div class="container-fluid p-3">
+                <div class="row justify-content-center gy-4">
                     <h2 class="display-6 text-center color_black">CONTACT ME</h2>
-                    <div class="col-6 d-flex justify-content-evenly align-items-center">
+                    <div class="col-6 d-flex justify-content-evenly align-items-center mb-3">
                         <div class="line_ col-3 bg_black"></div>
                         <i class="fa-solid fa-star color_black display-6"></i>
                         <div class="line_ col-3 bg_black"></div>
@@ -159,19 +161,19 @@
                 </div>
                 <div class="row">
                     <form action="#">
-                        <div class="contact_ col-12 mb-1 p-3">
-                            <input type="text" class="col-12 p-3" placeholder="Name">
+                        <div class="contact_ col-12 mb-1 g-3">
+                            <input type="text" class="col-12 p-3 border-0" placeholder="Name" required>
                         </div>
-                        <div class="contact_ col-12 mb-1 p-3">
-                            <input type="email" name="Email Address" class="col-12 p-3" placeholder="Email Address">
+                        <div class="contact_ col-12 mb-1 g-3">
+                            <input type="email" name="Email Address" class="col-12 p-3 border-0" required placeholder="Email Address">
                         </div>
-                        <div class="contact_ col-12 mb-1 p-3">
-                            <input type="number" name="Telephone Number" class="col-12 p-3" placeholder="Phone Number">
+                        <div class="contact_ col-12 mb-1 g-3">
+                            <input type="number" name="Telephone Number" class="col-12 p-3 border-0" required placeholder="Phone Number">
                         </div>
-                        <div class="contact_ col-12 mb-1 p-3">
-                            <textarea name="message" class="col-12 p-3" placeholder="Message" cols="30" rows="10"></textarea>
+                        <div class="contact_ col-12 mb-1 g-3">
+                            <textarea name="message" class="col-12 p-3 border-0" placeholder="Message" cols="30" rows="10"></textarea>
                         </div>
-                        <div class="contact_ col-2 p-3">
+                        <div class="contact_ col-2 g-3">
                             <button type="submit" class="btn btn-success bg_cyan">Send</button>
                         </div>
                     </form>
@@ -185,21 +187,21 @@
     <footer>
         <!-- footer up -->
         <section class="bg_footer_up">
-            <div class="container-xxl p-3">
+            <div class="container-fluid p-3">
                 <div class="row justify-content-evenly">
-                    <div class="col-3 p-5 text-center color_white">
+                    <div class="col-12 col-md-4 p-5 text-center color_white">
                         <h5>LOCATION</h5>
                         <small>2215 John Daniel Drive Clark, MO</small>
                         <small>54243</small>
                     </div>
-                    <div class="col-3 p-5 text-center color_white">
+                    <div class="col-12 col-md-4 p-5 text-center color_white">
                         <h5>AROUND THE WEB</h5>
                         <i class="fa-brands fa-facebook-f border rounded-circle p-3"></i>
                         <i class="fa-brands fa-google-plus-g border rounded-circle p-3"></i>
                         <i class="fa-brands fa-twitter border rounded-circle p-3"></i>
                         <i class="fa-brands fa-linkedin-in border rounded-circle p-3"></i>
                     </div>
-                    <div class="col-3 p-5 text-center color_white">
+                    <div class="col-12 col-md-4 p-5 text-center color_white">
                         <h5>ABOUT FREELANCER</h5>
                         <small>
                             Frælance is a free to use, source
@@ -213,7 +215,7 @@
 
         <!-- footer down -->
         <section class="bg_footer_down">
-            <div class="container-xxl p-3">
+            <div class="container-fluid p-3">
                 <div class="row justify-content-center">
                     <div class="col-3 text-center color_white p-3">
                         <small>Copyright © Your Website 2019</small>
