feat(add animation)

--- a/index.html
+++ b/index.html
@@ -70,34 +70,34 @@
                 </div>
                 <div class="container-xxl">
                     <div class="row justify-content-center">
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/cabin.png" alt="cabin">
+                                <img class="img-fluid rounded-5" src="./img/cabin.png" alt="cabin">
                             </div>
                         </div>
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/cake.png" alt="cake">
+                                <img class="img-fluid rounded-5" src="./img/cake.png" alt="cake">
                             </div>
                         </div>
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/circus.png" alt="circus">
+                                <img class="img-fluid rounded-5" src="./img/circus.png" alt="circus">
                             </div>
                         </div>
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/game.png" alt="game">
+                                <img class="img-fluid rounded-5" src="./img/game.png" alt="game">
                             </div>
                         </div>
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/safe.png" alt="safe">
+                                <img class="img-fluid rounded-5" src="./img/safe.png" alt="safe">
                             </div>
                         </div>
-                        <div class="card_ col-11 col-md-6 col-lg-4 g-3">
+                        <div class="card_ col-11 col-md-6 col-lg-4 g-5">
                             <div class="row justify-content-center align-items-center">
-                                <img class="img-fluid" src="./img/submarine.png" alt="submarine">
+                                <img class="img-fluid rounded-5" src="./img/submarine.png" alt="submarine">
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
         </section>
 
         <!-- about -->
-        <section id="about" class="bg_cyan mt-3">
+        <section id="about" class="bg_cyan mt-5">
             <div class="container-fluid">
                 <div class="row justify-content-center gx-4">
                     <h2 class="display-6 text-center color_white">ABOUT</h2>
